// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page when finished loading correctly renders 1`] = `
<div>
  <Component
    text="Projects"
  />
  <Component
    projects="list-of-projects"
  />
</div>
`;

exports[`Page when loading renders with loading information 1`] = `
<div>
  <Component
    text="Projects"
  />
  <Component
    text="Fetching projects..."
  />
</div>
`;

exports[`Page with error renders with error bar 1`] = `
<div>
  <Component
    text="Projects"
  />
  <Component
    detail="an error"
    text="Could not load projects"
  />
</div>
`;
